# chess-client-kit

./: LICENSE  README.md  pyproject.toml
src/chessdk/: __init__.py  base.py  cli.py  evaluation.py  fen.py  lichess.py  reference.py  search.py  squares.py  tapered.py  types.py  uci.py  zobrist.py
src/chessdk/house/: __init__.py  _common.py  always_captures.py  crusader.py  edge_lord.py  greedy_gus.py  hangs_pieces.py  hoarder.py  knightmare.py  magnus_maximus.py  magnus_mini.py  materialist.py  random_legal.py  tunnel_vision.py
src/chessdk/scaffold/: board.py  bot.py  evaluation.py  search.py
src/chessdk/scaffold/tests/: test_stage13_material.py  test_stage23_quiescence.py  test_stage5_make_undo.py  test_stage6_attacked.py  test_stage6_legal.py  test_stage7_castling.py  test_stage8_en_passant.py  test_stage8_promotion.py
tests/: test_cli_submit.py  test_evaluation.py  test_house_bots.py  test_magnus_maximus.py  test_uci_adapter.py
