[project]
name = "chess-client-kit"
version = "0.2.0"
description = "Student client kit for the Eastbridge Academy chess bot project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eastbridge Academy" }]
dependencies = [
    "click>=8.1",
    "pytest>=8.0",
    "requests>=2.31",
]

[project.scripts]
chess-cli = "chessdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chessdk"]

[tool.hatch.build.targets.wheel.force-include]
"src/chessdk/scaffold" = "chessdk/scaffold"

[tool.pytest.ini_options]
testpaths = ["tests", "src/chessdk/scaffold/tests"]
